# finance_manager

./: .gitignore  app.py  bank.py  finance_manager.py  plot_generator.py  pyproject.toml
src/app/: __main__.py  main_window.py
src/bank/: bank.py
src/config/: __init__.py  budget.json  description_category_map.json  filters_config.json  finance_manager.json  normalization_rules.json  style.qss
src/managers/: finances.py
src/plotting/: plot_generator.py
src/processing/: cleaners.py
src/utilities/: dates.py
tests/: conftest.py  test_cleaner.py  test_finances.py
